--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,19 @@ body {
 }
 
 .app-container {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
 
-  width: 100vw;
-  height: 100vh;
+.viewport {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  pointer-events: none;
+}
+.viewport > * {
+  pointer-events: auto;
 }
