--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,44 @@
 body {
   font-family: sans-serif;
+
   pointer-events: none;
 }
 
+#root {
+  width: 100%;
+  height: 100%;
+
+  --toolbar-size: 5em;
+}
+
 .app-container {
+  display: flex;
+  flex-direction: row;
+
   width: 100%;
   height: 100%;
 }
 
 .viewport {
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: relative;
+
   width: 100%;
   height: 100%;
 
   pointer-events: none;
+  outline: 2px dotted black;
 }
 .viewport > * {
+  pointer-events: auto;
+}
+
+#theCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+
   pointer-events: auto;
 }
